; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-cpm.c_cpm_i2c_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-cpm.c_cpm_i2c_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.cpm_i2c = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @cpm_i2c_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpm_i2c_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.cpm_i2c*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.cpm_i2c* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.cpm_i2c* %5, %struct.cpm_i2c** %3, align 8
  %6 = load %struct.cpm_i2c*, %struct.cpm_i2c** %3, align 8
  %7 = getelementptr inbounds %struct.cpm_i2c, %struct.cpm_i2c* %6, i32 0, i32 0
  %8 = call i32 @i2c_del_adapter(i32* %7)
  %9 = load %struct.cpm_i2c*, %struct.cpm_i2c** %3, align 8
  %10 = call i32 @cpm_i2c_shutdown(%struct.cpm_i2c* %9)
  %11 = load %struct.cpm_i2c*, %struct.cpm_i2c** %3, align 8
  %12 = call i32 @kfree(%struct.cpm_i2c* %11)
  ret i32 0
}

declare dso_local %struct.cpm_i2c* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @i2c_del_adapter(i32*) #1

declare dso_local i32 @cpm_i2c_shutdown(%struct.cpm_i2c*) #1

declare dso_local i32 @kfree(%struct.cpm_i2c*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
